5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1800_2569.log
== TEST (2019-06-12 23:13:17) 
-- CODE:
frvom numpy import *
from math import *
v= array(eval(input("")))
b = sum(v)/size(v)
i = 0
for z in v:
	i = i + (z - b)**2
i = sqrt(i/(size(v) - 1))
print(round(i,3))
-- ERROR:
File "XXXX", line 1
    frvom numpy import *
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:13:28) 
-- CODE:
from numpy import *
from math import *
v= array(eval(input("")))
b = sum(v)/size(v)
i = 0
for z in v:
	i = i + (z - b)**2
i = sqrt(i/(size(v) - 1))
print(round(i,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:14:04) 
-- CODE:
from numpy import *
from math import *
v= array(eval(input("")))
b = sum(v)/size(v)
i = 0
for z in v:
	i = i + (z - b)**2
i = sqrt(i/(size(v) - 1))
print(round(i,3))
-- EXECUTION TIME:
1.08641
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
